--- a/apiAnalisis/templates/main.html
+++ b/apiAnalisis/templates/main.html
@@ -85,18 +85,12 @@
             <div class="row">
                 <div class="col-lg-5 col-xs-10 about-company">
                     <h2 style="font-size: 2em">Enlaces Externos</h2>
-                    <p class="pr-5 text-white-50"><a href="https://www.kaggle.com/leoal-cdlv99/ml-cd"
-                                                     style="font-size: 1.5em">- Cuaderno Jupyter</a></p><br>
-                    <p class="pr-5 text-white-50"><a href="/apiCNN/informe/"
-                                                     style="font-size: 1.5em">- HTML Documentado</a></p><br>
-                    <p class="pr-5 text-white-50"><a href="https://github.com/leoAlvTor/ProyectoInterciclo"
-                                                     style="font-size: 1.5em">- Proyecto Django</a></p><br>
-                    <p class="pr-5 text-white-50"><a href="https://drive.google.com/file/d/1xaZTnpG7_I3LE2A4lQM2im63u6HdreNo/view?usp=sharing"
-                                                     style="font-size: 1.5em">- Documentacion Despliegue En La Nube</a></p>
+                    <p class="pr-5 text-white-50"><a href="https://github.com/Remigiohurtadoins/proyectoanalisisdatos"
+                                                     style="font-size: 1.5em">- Repositorio en github</a></p><br>
                 </div>
 
                 <div class="col-lg-4 col-xs-10 location">
-                    <h4 class="mt-lg-0 mt-sm-4" style="font-size: 2em; min-font-size: 25px">Programador:</h4><br>
+                    <h4 class="mt-lg-0 mt-sm-4" style="font-size: 2em; min-font-size: 25px">Desarrollador:</h4><br>
                     <h4>Remigio Hurtado</h4><br>
                 </div>
             </div>
