--- a/apiAnalisis/templates/main.html
+++ b/apiAnalisis/templates/main.html
@@ -40,8 +40,9 @@
             <a class="navbar-brand" href="#">Servicios</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Inicio</a></li>
-            <li><a onclick="listarRegistros()">Listar Clientes</a></li>
+            <li class="active"><a href="/apiAnalisis/">Inicio</a></li>
+            <li><a href="/apiAnalisis/mostrarInterfazBuscar/"> Buscar un Cliente</a></li>
+            <li><a href="/apiAnalisis/clientes/"> Mostrar Clientes</a></li>
         </ul>
     </div>
 </nav>
